--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <h1>International Visitors to London</h1>
 
+    <div class='container' id="year_select"></div>
+
     <div id="region_totals_chart"></div>
+    <div id="top10Spend"></div>
 </body>
 </html>
