Add stacked bar chart

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     <h1>International Visitors to London</h1>
 
     <div class='container' id="year_select"></div>
-
-    <div id="region_totals_chart"></div>
-    <div id="top10Spend"></div>
+    <div class='container'>
+        <div id="region_totals_chart"></div>
+        <div id="top10Spend"></div>
+        <div id="mode_travel"></div>
+    </div>
+    <div class='container' id="stacked_purpose_travel"></div>
+    <!-- <div class='container' id="average_spend_days"></div> -->
+    <div class='container' id='line_spend_years_qtr'></div>
 </body>
 </html>
