Update js for Stacked bar Chart

--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
 <body>
 
     <h1>International Visitors to London</h1>
-
-    <div class='container' id="year_select"></div>
-    <div class='container'>
+    <div class='row'>
+    <div class='container-fluid' id="year_select"></div>
+    </div>
+    <div class='container row'>
         <div id="region_totals_chart"></div>
-        <div id="top10Spend"></div>
         <div id="mode_travel"></div>
+        <div id="top10Spend"></div>
     </div>
     <div class='container' id="stacked_purpose_travel"></div>
     <!-- <div class='container' id="average_spend_days"></div> -->
-    <div class='container' id='line_spend_years_qtr'></div>
+    <div class='row'>
+        <div class='container' id='line_spend_years_qtr'></div>
+    </div>
 </body>
 </html>
