Add composite chart for Quarters spend

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div id="mode_travel"></div>
         <div id="top10Spend"></div>
     </div>
-    <div class='container' id="stacked_purpose_travel"></div>
+    <div id="stacked_purpose_travel"></div>
     <!-- <div class='container' id="average_spend_days"></div> -->
-    <div class='row'>
-        <div class='container' id='line_spend_years_qtr'></div>
-    </div>
+    
+        <div id='line_spend_years_qtr'></div>
+    
 </body>
 </html>
