Format numbers in charts

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="card border-info col-xs-12 col-lg-6">
                 <div class="card-body">
                     <h4 class="card-title">Mode of Transport of Visitors arrival in London</h4> 
-                        <h6>*Number in 1000s</h6>
+                        <h6>*Number of visitors in 1000s</h6>
                         <div id="mode_travel"></div>
                         <h6>Note: A large percentage of Non-European International visitors arrive via the European Continent</h6>
                 </div>
