delete out code for non used data table chart

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <header>
-        <script> alert("This website is best viewed in landscape mode on a mobile device"); </script>
+        <script> alert("On a mobile device, this website is best viewed in landscape mode"); </script>
        
         <div class="container">
             <img src="images/london_skyline.jpg" alt="London Skyline" class="header-image">
@@ -57,9 +57,9 @@
       <!-- Pie Charts & Top 10 Country chart --> 
     <div class="container">
         <div class="row">
-            <div class="card border-info col-xs-12 col-lg-6">
-                <div class="card-body">
-                    <h4 class="card-title">Number of Vistors by Region of Origin</h4>
+            <div class=" col-xs-12 col-lg-6">
+                <div class="">
+                    <h4 class="title">Number of Vistors by Region of Origin</h4>
                     
                     <h6>*Number in 1000s</h6>
                     <div id="region_totals_chart"></div>
@@ -67,9 +67,9 @@
                 </div>
             </div>
 
-            <div class="card border-info col-xs-12 col-lg-6">
-                <div class="card-body">
-                    <h4 class="card-title">Spend In GBP £ of Top 10 Countries</h4>
+            <div class=" col-xs-12 col-lg-6">
+                <div class="">
+                    <h4 class="title">Spend In GBP £ of Top 10 Countries</h4>
                     <h6>*Number in 1000s</h6>
                     <div class="chart-container">
                         <div id="top10Spend"></div>
