--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </head>
 <body>
     <header>
-        <!-- <script> alert("On a mobile device, this website is best viewed in landscape mode"); </script>
-        -->
+        <script> alert("On a mobile device, this website is best viewed in landscape mode"); </script>
+       
         <div class="container">
             <img src="images/london_skyline.jpg" alt="London Skyline" class="header-image">
         
