Fix scrolling reset button syntax

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <!-- Year selector and reset button -->
     <section>
-        <button class="reset reset-button" id="myBtn" title="Reset">
-            <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
-        </button>
+         <a class='reset reset-button' id='myBtn' href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+      
         <div class="container">
             <div class="col-12 col-sm">
                 <h1 class='page-title'>International Visitors to London</h1>
+                <h6 class='page-title'>Visitors to London from foreign countries from 2002 to 2017</h6>
             </div>
         </div>
         <div class="container">
@@ -55,7 +55,7 @@
                 <div id="year_select">Select Year </div>
             </div>
         </div>
-    </section>
+   
       <!-- Pie Charts & Top 10 Country chart --> 
     <div class="container">
         <div class="row">
@@ -140,8 +140,7 @@
             </div>
         </div>
     </footer>
-<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html> 
 
